--- a/recruiting-parity.html
+++ b/recruiting-parity.html
@@ -16,7 +16,6 @@
 
     <div class="buttons">
       <h3>Actual 2019 <br> Signings</h3>
-      <h3>Remaining <br>Starting Spot</h3>
       <h3>Remaining <br> Scholarship</h3>
       <h3>Remaining <br> Restricted Money</h3>
       <h3>Remaining <br> Percent of Revenue</h3>
@@ -24,7 +23,7 @@
 
     <div class="actual">
       <div class="actual-alabama">
-        <div id="hover">
+        <div class="reveal-actual-alabama">
           <img src="images/alabama.png" alt="Alabama logo" height="50px" width="auto">
           <h5>University of Alabama</h5>
           <h5>26 recruits</h5>
@@ -32,7 +31,7 @@
         </div>
       </div>
       <div class="actual-georgia">
-        <div id="hover">
+        <div class="reveal-actual-georgia">
           <img src="images/georgia.png" alt="Georgia logo" height="50px" width="auto">
           <h5>University of Georgia</h5>
           <h5>16 recruits</h5>
@@ -40,7 +39,7 @@
         </div>
       </div>
       <div class="actual-texas">
-        <div id="hover">
+        <div class="reveal-actual-texas">
           <img src="images/texas.png" alt="Texas logo" height="50px" width="auto">
           <h5>University of Texas</h5>
           <h5>13 recruits</h5>
@@ -425,6 +424,258 @@
       </div>
     </div>
 
+    <div class="buttons">
+      <h3>Remaining <br>Starting Spot</h3>
+    </div>
+
+    <div class="starter">
+      <div class="starter-clemson">
+        <div id="hover">
+          <img src="images/clemson.png" alt="Clemson logo" height="50px" width="auto">
+          <h5>Clemson University</h5>
+          <h5>22 recruits</h5>
+          <h5>6,277 points</h5>
+        </div>
+      </div>
+      <div class="starter-alabama">
+        <div id="hover">
+          <img src="images/alabama.png" alt="Alabama logo" height="50px" width="auto">
+          <h5>University of Alabama</h5>
+          <h5>22 recruits</h5>
+          <h5>5,846 points</h5>
+        </div>
+      </div>
+      <div class="starter-ohiostate">
+        <div id="hover">
+          <img src="images/ohiostate.png" alt="Ohio State logo" height="50px" width="auto">
+          <h5>Ohio State University</h5>
+          <h5>22 recruits</h5>
+          <h5>5,303 points</h5>
+        </div>
+      </div>
+      <div class="starter-oklahoma">
+        <div class="reveal-starter-oklahoma">
+          <img src="images/oklahoma.png" alt="Oklahoma logo" height="50px" width="auto">
+          <h5>University of Oklahoma</h5>
+          <h5>22 recruits</h5>
+          <h5>4,800 points</h5>
+        </div>
+      </div>
+      <div class="starter-notredame">
+        <div class="reveal-starter-notredame">
+          <img src="images/notredame.png" alt="Notre Dame logo" height="50px" width="auto">
+          <h5>University of Notre Dame</h5>
+          <h5>22 recruits</h5>
+          <h5>4,223 points</h5>
+        </div>
+      </div>
+      <div class="starter-lsu">
+        <div class="reveal-starter-lsu">
+          <img src="images/lsu.png" alt="LSU logo" height="50px" width="auto">
+          <h5>Louisiana State University</h5>
+          <h5>21 recruits</h5>
+          <h5>3,656 points</h5>
+        </div>
+      </div>
+      <div class="starter-florida">
+        <div class="reveal-starter-florida">
+          <img src="images/florida.png" alt="Florida logo" height="50px" width="auto">
+          <h5>University of Florida</h5>
+          <h5>21 recruits</h5>
+          <h5>3,210 points</h5>
+        </div>
+      </div>
+      <div class="starter-georgia">
+        <div class="reveal-starter-georgia">
+          <img src="images/georgia.png" alt="Georgia logo" height="50px" width="auto">
+          <h5>University of Georgia</h5>
+          <h5>21 recruits</h5>
+          <h5>2,637 points</h5>
+        </div>
+      </div>
+      <div class="starter-texas">
+        <div class="reveal-starter-texas">
+          <img src="images/texas.png" alt="Texas logo" height="50px" width="auto">
+          <h5>University of Texas</h5>
+          <h5>20 recruits</h5>
+          <h5>2,134 points</h5>
+        </div>
+      </div>
+      <div class="starter-washingtonstate">
+        <div class="reveal-starter-washingtonstate">
+          <img src="images/washingtonstate.png" alt="Washington State logo" height="50px" width="auto">
+          <h5>Washington State University</h5>
+          <h5>20 recruits</h5>
+          <h5>1,671 points</h5>
+        </div>
+      </div>
+      <div class="starter-ucf">
+        <div class="reveal-starter-ucf">
+          <img src="images/ucf.png" alt="UCF logo" height="50px" width="auto">
+          <h5>University of Central Florida</h5>
+          <h5>20 recruits</h5>
+          <h5>1,195 points</h5>
+        </div>
+      </div>
+      <div class="starter-kentucky">
+        <div class="reveal-starter-kentucky">
+          <img src="images/kentucky.png" alt="Kentucky logo" height="50px" width="auto">
+          <h5>University of Kentucky</h5>
+          <h5>14 recruits</h5>
+          <h5>900 points</h5>
+        </div>
+      </div>
+      <div class="starter-washington">
+        <div class="reveal-starter-washington">
+          <img src="images/washington.png" alt="Washington logo" height="50px" width="auto">
+          <h5>University of Washington</h5>
+          <h5>12 recruits</h5>
+          <h5>642 points</h5>
+        </div>
+      </div>
+      <div class="starter-michigan">
+        <div class="reveal-starter-michigan">
+          <img src="images/michigan.png" alt="Michigan logo" height="50px" width="auto">
+          <h5>University of Michigan</h5>
+          <h5>8 recruits</h5>
+          <h5>474 points</h5>
+        </div>
+      </div>
+      <div class="starter-syracuse">
+        <div class="reveal-starter-syracuse">
+          <img src="images/syracuse.png" alt="Syracuse logo" height="50px" width="auto">
+          <h5>Syracuse University</h5>
+          <h5>5 recruits</h5>
+          <h5>381 points</h5>
+        </div>
+      </div>
+      <div class="starter-texasam">
+        <div class="reveal-starter-texasam">
+          <img src="images/texasam.png" alt="Texas A&M logo" height="50px" width="auto">
+          <h5>Texas A&M University</h5>
+          <h5>5 recruits</h5>
+          <h5>271 points</h5>
+        </div>
+      </div>
+      <div class="starter-pennstate">
+        <div class="reveal-starter-pennstate">
+          <img src="images/pennstate.png" alt="Penn State logo" height="50px" width="auto">
+          <h5>Pennsylvania State University</h5>
+          <h5>3 recruits</h5>
+          <h5>205 points</h5>
+        </div>
+      </div>
+      <div class="starter-fresnostate">
+        <div class="reveal-starter-fresnostate">
+          <img src="images/fresnostate.png" alt="Fresno State logo" height="50px" width="auto">
+          <h5>California State University, Fresno</h5>
+          <h5>2 recruits</h5>
+          <h5>180 points</h5>
+        </div>
+      </div>
+      <div class="starter-army">
+        <div class="reveal-starter-army">
+          <img src="images/army.png" alt="Army logo" height="50px" width="auto">
+          <h5>United States Military Academy</h5>
+          <h5>2 recruits</h5>
+          <h5>167 points</h5>
+        </div>
+      </div>
+      <div class="starter-westvirginia">
+        <div class="reveal-starter-westvirginia">
+          <img src="images/westvirginia.png" alt="West Virginia logo" height="50px" width="auto">
+          <h5>West Virginia University</h5>
+          <h5>2 recruits</h5>
+          <h5>158 points</h5>
+        </div>
+      </div>
+      <div class="starter-northwestern">
+        <div class="reveal-starter-northwestern">
+          <img src="images/northwestern.png" alt="Northwestern logo" height="50px" width="auto">
+          <h5>Northwestern University</h5>
+          <h5>2 recruits</h5>
+          <h5>155 points</h5>
+        </div>
+      </div>
+      <div class="starter-utahstate">
+        <div class="reveal-starter-utahstate">
+          <img src="images/utahstate.png" alt="Utah State logo" height="50px" width="auto">
+          <h5>Utah State University</h5>
+          <h5>2 recruits</h5>
+          <h5>146 points</h5>
+        </div>
+      </div>
+      <div class="starter-boisestate">
+        <div class="reveal-starter-boisestate">
+          <img src="images/boisestate.png" alt="Boise State logo" height="50px" width="auto">
+          <h5>Boise State University</h5>
+          <h5>2 recruits</h5>
+          <h5>136 points</h5>
+        </div>
+      </div>
+      <div class="starter-cincinatti">
+        <div class="reveal-starter-cincinatti">
+          <img src="images/cincinatti.png" alt="Cincinatti logo" height="50px" width="auto">
+          <h5>University of Cincinatti</h5>
+          <h5>2 recruits</h5>
+          <h5>104 points</h5>
+        </div>
+      </div>
+      <div class="starter-iowa">
+        <div class="reveal-starter-iowa">
+          <img src="images/iowa.png" alt="Iowa logo" height="50px" width="auto">
+          <h5>University of Iowa</h5>
+          <h5>1 recruit</h5>
+          <h5>81 points</h5>
+        </div>
+      </div>
+      <div class="starter-appalachianstate">
+        <div class="reveal-starter-appalachianstate">
+          <img src="images/appalachianstate.png" alt="Appalachian State logo" height="50px" width="auto">
+          <h5>Appalachian State University</h5>
+          <h5>1 recruit</h5>
+          <h5>68 points</h5>
+        </div>
+      </div>
+      <div class="starter-mississippistate">
+        <div class="reveal-starter-mississippistate">
+          <img src="images/mississippistate.png" alt="Mississippi State logo" height="50px" width="auto">
+          <h5>Mississippi State University</h5>
+          <h5>1 recruit</h5>
+          <h5>48 points</h5>
+        </div>
+      </div>
+      <div class="starter-utah">
+        <div class="reveal-starter-utah">
+          <img src="images/utah.png" alt="Utah logo" height="50px" width="auto">
+          <h5>University of Utah</h5>
+          <h5>1 recruit</h5>
+          <h5>40 points</h5>
+        </div>
+      </div>
+      <div class="starter-uab">
+        <div class="reveal-starter-uab">
+          <img src="images/uab.png" alt="UAB logo" height="50px" width="auto">
+          <h5>University of Alabama at Birmingham</h5>
+          <h5>1 recruit</h5>
+          <h5>36 points</h5>
+        </div>
+      </div>
+      <div class="starter-iowastate">
+        <div class="reveal-starter-iowastate">
+          <img src="images/iowastate.png" alt="Iowa State logo" height="50px" width="auto">
+          <h5>Iowa State University</h5>
+          <h5>1 recruit</h5>
+          <h5>6 points</h5>
+        </div>
+      </div>
+
+    </div>
 
   </body>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="popup.js"></script>
+
 </html>
