add team finances table

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       font-weight: 700;
     }
 
+    strong {
+      font-style: italic;
+      font-weight: 400;
+    }
+
     .flex-pro-con {
       display: flex;
       justify-content: space-around;
@@ -90,20 +95,17 @@
     }
 
     .summary {
-      border: 2px solid #000000;
-      margin: 20px 40px;
+      margin: 20px 70px 40px 70px;
     }
 
     .facts {
       display: flex;
       flex-wrap: wrap;
+      margin-bottom: 25px;
     }
 
     h2 {
       color: #ffffff;
-      top: 10px;
-      position: absolute;
-      top: 65px;
     }
 
     .facts-buttons {
@@ -112,11 +114,11 @@
       height: 200px;
       border-radius: 50%;
       text-align: center;
-      position: relative;
     }
     .facts-buttons a{
       color: #FFFFFF;
       text-decoration: none;
+      display: inline-block;
     }
     .facts-buttons a:hover{
       text-decoration: underline;
@@ -130,27 +132,44 @@
       <div class="pro">
         <h5>"The only other time when labor does not get paid but yet someone else gets profits and the labor is black and the profit is white, is in slavery."</h5>
         <p>Kylia Carter, mother of former Duke Men's Basketball player, Wendell Carter Jr. in May of 2018</p>
-        <a href="#">Common arguments <em>for</em> paying student-athletes</a>
+        <a href="pro.html">Common arguments <em>for</em> paying student-athletes</a>
       </div>
 
       <div class="con">
         <h5>"I don't think we should ever compensate players...They can keep their meal money ... Everybody says, 'the coach makes this and the players[0].' The player is 17 years old. I've been working my whole life. There's a lot of 17-year-old kids that don't make money."</h5>
         <p>Jim Boeheim, Syracuse Men's Basketball Head Coach in October of 2018</p>
-        <a href="#">Common arguments <em>against</em> paying student-athletes</a>
+        <a href="con.html">Common arguments <em>against</em> paying student-athletes</a>
       </div>
   </div>
   <div class="summary">
-    <p>some quick summary about why i did this...</p>
+    <p style="font-size:18px"><strong>Student-athletes are slaves</strong> versus <strong>I've been working my whole life.</strong> Unfortunately, these sensationalized arguments have become commonplace in the debate over whether or not student-athletes should be paid. Below, are the facts surrounding some key questions: how much do schools actually make off athletics; how would paying athletes change recruiting parity; how difficult is it to follow the rules; where do the terms amateur and student-athlete come from; how much do professional athletes really get paid;</p>
   </div>
   <div class="facts">
     <div class="facts-buttons">
-      <h2>Athletics Finances</h2>
+      <h2><a href="ncaa-finances.html">NCAA Finances</a></h2>
+    </div>
+    <div class="facts-buttons">
+      <h2><a href="athletic-department-finances.html">Athletic Department Finances</a></h2>
     </div>
     <div class="facts-buttons">
       <h2><a href="recruiting-parity.html">Recruiting Parity</a></h2>
     </div>
     <div class="facts-buttons">
-      <h2>Weekly Schedule</h2>
+      <h2><a href="rulebook.html">The <br> Rulebook</a></h2>
+    </div>
+  </div>
+  <div class="facts">
+    <div class="facts-buttons">
+      <h2><a href="">Amateurism <br> Definition</a></h2>
+    </div>
+    <div class="facts-buttons">
+      <h2><a href="">Student-Athlete <br> Definition</a></h2>
+    </div>
+    <div class="facts-buttons">
+      <h2><a href="professional-comparison.html">Comparison to <br> Professional</a></h2>
+    </div>
+    <div class="facts-buttons">
+      <h2><a href="scholarship-distribution.html">Scholarship Distribution</a></h2>
     </div>
   </div>
   </body>
