update lots of stuff

--- a/con.html
+++ b/con.html
@@ -11,6 +11,8 @@
       <h4><a href="index.html">Return to Home Page</a></h4>
       <h1>Common Arguments <em>Against</em> Paying Student-Athletes</h1>
     </div>
+    <h5>"I don't think we should ever compensate players...They can keep their meal money ...   Everybody says, 'the coach makes this and the players[0].' The player is 17 years old. I've been working my whole life. There's a lot of 17-year-old kids that don't make money."</h5>
+    <p><em>Jim Boeheim</em>, Syracuse Men's Basketball Head Coach in October of 2018</p>
 
   </body>
 </html>
