--- a/pro.html
+++ b/pro.html
@@ -12,6 +12,8 @@
       <h1>Common Arguments <em>For</em> Paying Student-Athletes</h1>
     </div>
 
+    <h5>"The only other time when labor does not get paid but yet someone else gets profits and the labor is black and the profit is white, is in slavery."</h5>
+    <p><em>Kylia Carter</em>, mother of former Duke Men's Basketball player, Wendell Carter Jr. in May of 2018</p>
     <ul>
       <li></li>
     </ul>
