--- a/professional-comparison.html
+++ b/professional-comparison.html
@@ -13,72 +13,254 @@
         <h4><a href="index.html">Return to Home Page</a></h4>
         <h1>How do Scholarships Compare to Professional Salaries?</h1>
         <p>One big argument against paying student-athletes is scholarships are payment enough. </p>
+      </div>
     </div>
 
-    <div class="space"></div>
-
+    <div class="line">
     <div class="graph">
+
       <div class="cowboys">
-        <h3>Texas Cowboys</h3>
-        <div class="rectangle cowboys-revenue"></div>
-        <div class="rectangle1 cowboys-salary"></div>
-        <div class="cowboys-millions">
-          <h5 id="revenue">$686.8</h5>
-          <h5 id="salary">$177.2</h5>
+        <div class="rectangle cowboys-revenue">
+          <h3>Texas Cowboys</h3>
+          <h5 class="cowboys-millions" id="revenue">$733.8</h5>
+          <h5 class="cowboys-percentage" id="revenue">84.93%</h5>
         </div>
-        <div class="cowboys-percentage">
-          <h5 id="revenue">79.49%</h5>
-          <h5 id="salary">20.51%</h5>
+        <div class="rectangle1 cowboys-salary">
+          <h5 class="cowboys-millions" id="salary">$130.2</h5>
+          <h5 class="cowboys-percentage" id="salary">15.07%</h5>
         </div>
       </div>
 
       <div class="texas">
-        <h3>University of Texas</h3>
-        <div class="rectangle2 texas-revenue"></div>
-        <div class="rectangle1 texas-salary"></div>
-        <div class="texas-millions">
-          <h5 id="revenue">$136.6</h5>
-          <h5 id="salary">$4.4</h5>
+        <div class="rectangle2 texas-revenue">
+          <h3>University of Texas</h3>
+          <h5 class="texas-millions" id="revenue">$136.6</h5>
+          <h5 class="texas-percentage" id="revenue">96.88%</h5>
         </div>
-        <div class="texas-percentage">
-          <h5 id="revenue">96.88%</h5>
-          <h5 id="salary">3.12%</h5>
+        <div class="rectangle1 texas-salary">
+          <h5 class="texas-millions" id="salary">$4.4</h5>
+          <h5 class="texas-percentage" id="salary">3.12%</h5>
         </div>
       </div>
 
       <div class="patriots">
-        <h3>New England Patriots</h3>
-        <div class="rectangle patriots-revenue"></div>
-        <div class="rectangle1 patriots-salary"></div>
-        <div class="patriots-millions">
-          <h5 id="revenue">$415.8</h5>
-          <h5 id="salary">$177.2</h5>
+        <div class="rectangle patriots-revenue">
+          <h3>New England Patriots</h3>
+          <h5 class="patriots-millions" id="revenue">$442.5</h5>
+          <h5 class="patriots-percentage" id="revenue">74.62%</h5>
         </div>
-        <div class="patriots-percentage">
-          <h5 id="revenue">70.12%</h5>
-          <h5 id="salary">29.88%</h5>
+        <div class="rectangle1 patriots-salary">
+          <h5 class="patriots-millions" id="salary">$150.5</h5>
+          <h5 class="patriots-percentage" id="salary">25.38%</h5>
         </div>
       </div>
 
       <div class="tennessee">
-        <h3>University of Tennessee</h3>
-        <div class="rectangle2 tennessee-revenue"></div>
-        <div class="rectangle1 tennessee-salary"></div>
-        <div class="tennessee-millions">
-          <h5 id="revenue">$106.8</h5>
-          <h5 id="salary">$4.2</h5>
+        <div class="rectangle2 tennessee-revenue">
+          <h3>University of Tennessee</h3>
+          <h5 class="tennessee-millions" id="revenue">$106.8</h5>
+          <h5 class="tennessee-percentage" id="revenue">96.24%</h5>
         </div>
-        <div class="tennessee-percentage">
-          <h5 id="revenue">96.24%</h5>
-          <h5 id="salary">3.76%</h5>
+        <div class="rectangle1 tennessee-salary">
+          <h5 class="tennessee-millions" id="salary">$4.2</h5>
+          <h5 class="tennessee-percentage" id="salary">3.76%</h5>
         </div>
       </div>
 
+      <div class="giants">
+        <div class="rectangle giants-revenue">
+          <h3>New York Giants</h3>
+          <h5 class="giants-millions" id="revenue">$341.8</h5>
+          <h5 class="giants-percentage" id="revenue">69.33%</h5>
+        </div>
+        <div class="rectangle1 giants-salary">
+          <h5 class="giants-millions" id="salary">$151.2</h5>
+          <h5 class="giants-percentage" id="salary">30.67%</h5>
+        </div>
+      </div>
 
+      <div class="alabama">
+        <div class="rectangle2 alabama-revenue">
+          <h3>University of Alabama</h3>
+          <h5 class="alabama-millions" id="revenue">$104</h5>
+          <h5 class="alabama-percentage" id="revenue">96.32%</h5>
+        </div>
+        <div class="rectangle1 alabama-salary">
+          <h5 class="alabama-millions" id="salary">$4</h5>
+          <h5 class="alabama-percentage" id="salary">3.68%</h5>
+        </div>
+      </div>
 
+      <div class="redskins">
+        <div class="rectangle redskins-revenue">
+          <h3>Washington Redskins</h3>
+          <h5 class="redskins-millions" id="revenue">$334.7</h5>
+          <h5 class="redskins-percentage" id="revenue">68.17%</h5>
+        </div>
+        <div class="rectangle1 redskins-salary">
+          <h5 class="redskins-millions" id="salary">$156.3</h5>
+          <h5 class="redskins-percentage" id="salary">31.83%</h5>
+        </div>
+      </div>
+
+      <div class="michigan">
+        <div class="rectangle2 michigan-revenue">
+          <h3>University of Michigan</h3>
+          <h5 class="michigan-millions" id="revenue">$100.7</h5>
+          <h5 class="michigan-percentage" id="revenue">95.01%</h5>
+        </div>
+        <div class="rectangle1 michigan-salary">
+          <h5 class="michigan-millions" id="salary">$5.3</h5>
+          <h5 class="michigan-percentage" id="salary">4.99%</h5>
+        </div>
+      </div>
+
+      <div class="sanfran">
+        <div class="rectangle sanfran-revenue">
+          <h3>San Francisco 49ers</h3>
+          <h5 class="sanfran-millions" id="revenue">$370.8</h5>
+          <h5 class="sanfran-percentage" id="revenue">78.89%</h5>
+        </div>
+        <div class="rectangle1 sanfran-salary">
+          <h5 class="sanfran-millions" id="salary">$99.2</h5>
+          <h5 class="sanfran-percentage" id="salary">21.11%</h5>
+        </div>
+      </div>
+
+      <div class="notredame">
+        <div class="rectangle2 notredame-revenue">
+          <h3>University of Notre Dame</h3>
+          <h5 class="notredame-millions" id="revenue">$91.1</h5>
+          <h5 class="notredame-percentage" id="revenue">93.92%</h5>
+        </div>
+        <div class="rectangle1 notredame-salary">
+          <h5 class="notredame-millions" id="salary">$5.9</h5>
+          <h5 class="notredame-percentage" id="salary">6.08%</h5>
+        </div>
+      </div>
+
+      <div class="texans">
+        <div class="rectangle texans-revenue">
+          <h3>Houston Texans</h3>
+          <h5 class="texans-millions" id="revenue">$322.5</h5>
+          <h5 class="texans-percentage" id="revenue">69.50%</h5>
+        </div>
+        <div class="rectangle1 texans-salary">
+          <h5 class="texans-millions" id="salary">$141.5</h5>
+          <h5 class="texans-percentage" id="salary">30.50%</h5>
+        </div>
+      </div>
+
+      <div class="oklahoma">
+        <div class="rectangle2 oklahoma-revenue">
+          <h3>University of Oklahoma</h3>
+          <h5 class="oklahoma-millions" id="revenue">$92.3</h5>
+          <h5 class="oklahoma-percentage" id="revenue">96.13%</h5>
+        </div>
+        <div class="rectangle1 oklahoma-salary">
+          <h5 class="oklahoma-millions" id="salary">$3.7</h5>
+          <h5 class="oklahoma-percentage" id="salary">3.87%</h5>
+        </div>
+      </div>
+
+      <div class="eagles">
+        <div class="rectangle eagles-revenue">
+          <h3>Philadelphia Eagles</h3>
+          <h5 class="eagles-millions" id="revenue">$308.9</h5>
+          <h5 class="eagles-percentage" id="revenue">67.45%</h5>
+        </div>
+        <div class="rectangle1 eagles-salary">
+          <h5 class="eagles-millions" id="salary">$149.1</h5>
+          <h5 class="eagles-percentage" id="salary">32.55%</h5>
+        </div>
+      </div>
+
+      <div class="georgia">
+        <div class="rectangle2 georgia-revenue">
+          <h3>University of Georgia</h3>
+          <h5 class="georgia-millions" id="revenue">$89.2</h5>
+          <h5 class="georgia-percentage" id="revenue">95.89%</h5>
+        </div>
+        <div class="rectangle1 georgia-salary">
+          <h5 class="georgia-millions" id="salary">$3.8</h5>
+          <h5 class="georgia-percentage" id="salary">4.11%</h5>
+        </div>
+      </div>
+
+      <div class="falcons">
+        <div class="rectangle falcons-revenue">
+          <h3>Atlanta Falcons</h3>
+          <h5 class="falcons-millions" id="revenue">$295.3</h5>
+          <h5 class="falcons-percentage" id="revenue">65.48%</h5>
+        </div>
+        <div class="rectangle1 falcons-salary">
+          <h5 class="falcons-millions" id="salary">$155.7</h5>
+          <h5 class="falcons-percentage" id="salary">34.52%</h5>
+        </div>
+      </div>
+
+      <div class="ohiostate">
+        <div class="rectangle2 ohiostate-revenue">
+          <h3>The Ohio State University</h3>
+          <h5 class="ohiostate-millions" id="revenue">$88.3</h5>
+          <h5 class="ohiostate-percentage" id="revenue">96.01%</h5>
+        </div>
+        <div class="rectangle1 ohiostate-salary">
+          <h5 class="ohiostate-millions" id="salary">$3.7</h5>
+          <h5 class="ohiostate-percentage" id="salary">3.99%</h5>
+        </div>
+      </div>
+
+      <div class="jets">
+        <div class="rectangle jets-revenue">
+          <h3>New York Jets</h3>
+          <h5 class="jets-millions" id="revenue">$323.6</h5>
+          <h5 class="jets-percentage" id="revenue">73.05%</h5>
+        </div>
+        <div class="rectangle1 jets-salary">
+          <h5 class="jets-millions" id="salary">$119.4</h5>
+          <h5 class="jets-percentage" id="salary">26.95%</h5>
+        </div>
+      </div>
+
+      <div class="floridastate">
+        <div class="rectangle2 floridastate-revenue">
+          <h3>Florida State University</h3>
+          <h5 class="floridastate-millions" id="revenue">$86.1</h5>
+          <h5 class="floridastate-percentage" id="revenue">95.64%</h5>
+        </div>
+        <div class="rectangle1 floridastate-salary">
+          <h5 class="floridastate-millions" id="salary">$3.9</h5>
+          <h5 class="floridastate-percentage" id="salary">4.36%</h5>
+        </div>
+      </div>
+
+      <div class="packers">
+        <div class="rectangle packers-revenue">
+          <h3>Green Bay Packers</h3>
+          <h5 class="packers-millions" id="revenue">$323.6</h5>
+          <h5 class="packers-percentage" id="revenue">64.72%</h5>
+        </div>
+        <div class="rectangle1 packers-salary">
+          <h5 class="packers-millions" id="salary">$153.1</h5>
+          <h5 class="packers-percentage" id="salary">35.28%</h5>
+        </div>
+      </div>
+
+      <div class="pennstate">
+        <div class="rectangle2 pennstate-revenue">
+          <h3>Pennsylvania State University</h3>
+          <h5 class="pennstate-millions" id="revenue">$85.6</h5>
+          <h5 class="pennstate-percentage" id="revenue">95.13%</h5>
+        </div>
+        <div class="rectangle1 pennstate-salary">
+          <h5 class="pennstate-millions" id="salary">$4.4</h5>
+          <h5 class="pennstate-percentage" id="salary">4.87%</h5>
+        </div>
+      </div>
 
     </div>
-
+    </div>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="professional-comparison.js"></script>
