--- a/ncaa-finances.html
+++ b/ncaa-finances.html
@@ -10,34 +10,34 @@
   <body>
     <div class="header">
       <h4><a href="index.html">Return to Home Page</a></h4>
-      <h1>Where Does the NCAA Earn its Money, <br> and Where Does that Money Go?</h1>
+      <h1>Where Does the NCAA Earn its Money, and Where Does that Money Go?</h1>
       <p>There's a lot of money being moved around in NCAA Athletics. Where does the NCAA earn their money and  how does it get distributed. All of these numbers come from the <a href="http://www.ncaa.org/about/where-does-money-go" target="blank">NCAA Website</a>. Click on each dollar amount to learn more.</p>
     </div>
     <div class="profit-equation">
-      <div class="equation-parts">
+      <div class="equation">
         <h2>1,061M</h2>
-        <h3>Total Revenue</h3>
+        <h3>Revenue</h3>
         <h5>Year ended 8/31/17</h5>
       </div>
       <h2>-</h2>
-      <div class="equation-parts">
+      <div class="equation">
         <h2>956M</h2>
-        <h3>Total Expenses</h3>
+        <h3>Expenses</h3>
         <h5>Year ended 8/31/17</h5>
       </div>
       <h2>=</h2>
-      <div class="equation-parts">
+      <div class="equation">
         <h2>105M</h2>
-        <h3>Change in Net Assets</h3>
+        <h3>Profit</h3>
         <h5>Year ended 8/31/17</h5>
       </div>
     </div>
     <div class="profit-equation">
       <div class="equation-parts">
-        <h2>844M</h2>
+        <h1>844M</h1>
         <h5>D1 men's basketball championship television and marketing rights</h5>
         <div class="equation1 championship-tickets">
-          <h2>133M</h2>
+          <h1>133M</h1>
           <h5>championship ticket sales</h5>
           <div class="equation-modal championship-tickets-reveal">
             <p>The NCAA sponsors 90 NCAA championships and claims only 5 of these make a profit. The 5 profitable championships are all D1, men's sports including: Men's Basketball, Men's Ice Hockey, Men's Lacrosse, Wrestling, and Baseball.</p>
@@ -48,37 +48,37 @@
       </div>
       <div class="equation-parts">
         <div class="equation1 sport-sponsorship">
-          <h2>217M</h2>
+          <h1>217M</h1>
           <h5>sport sponsorship and scholarship funds</h5>
           <div class="equation-modal sport-sponsorship-reveal">
             <p>Money is distributed to Division I schools to help fund NCAA sports and provide scholarships for college athletes.</p>
           </div>
         </div>
-        <h2>161M</h2>
+        <h1>161M</h1>
         <h5>distributed to D1 conferences to for march madness performance</h5>
-        <h2>97M</h2>
+        <h1>97M</h1>
         <h5>D1 championships including athlete travel, food, and lodging</h5>
-        <h2>82M</h2>
+        <h1>82M</h1>
         <h5>distributed to D1 athletes for "essential needs" during college</h5>
-        <h2>74M</h2>
+        <h1>74M</h1>
         <h5>other association-wide expenses</h5>
-        <h2>72M</h2>
+        <h1>72M</h1>
         <h5>student-athlete services</h5>
-        <h2>50M</h2>
+        <h1>50M</h1>
         <h5>D1 equal conference fund</h5>
-        <h2>47M</h2>
+        <h1>47M</h1>
         <h5>distributed to D1 schools for academic programs and services</h5>
-        <h2>42M</h2>
+        <h1>42M</h1>
         <h5>funds D2 championships, grants, and other initiatives</h5>
-        <h2>40M</h2>
+        <h1>40M</h1>
         <h5>covers costs related to NCAA governance and convention</h5>
-        <h2>40M</h2>
+        <h1>40M</h1>
         <h5>NCAA general and administrative expenses</h5>
-        <h2>28M</h2>
+        <h1>28M</h1>
         <h5>funds D3 championships, grants, and other inititatives</h5>
-        <h2>10M</h2>
+        <h1>10M</h1>
         <h5>D1 conference grants for programming to enhance sports</h5>
-        <h2>3M</h2>
+        <h1>3M</h1>
         <h5>educational programs to help prepare student-athletes for life</h5>
       </div>
       <div class="equation-parts">
